--- a/apps/expo-app/public/index.html
+++ b/apps/expo-app/public/index.html
@@ -11,7 +11,27 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.00001, viewport-fit=cover"
     />
-    <title>ridi</title>
+    <meta property="og:title" content="Ridi motorcycle route generator" />
+    <meta
+      property="og:description"
+      content="Generate the perfect motorcycling route based based on your preferences with Ridi"
+    />
+    <meta property="og:image" content="https://ridi.bike/og-image.png" />
+    <meta property="og:url" content="https://ridi.bike" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ridi motorcycle route generator" />
+    <meta
+      name="twitter:description"
+      content="Generate the perfect motorcycling route based based on your preferences with Ridi"
+    />
+    <meta name="twitter:image" content="https://ridi.bike/og-image.png" />
+    <title>Ridi motorcycle route generator</title>
+    <meta
+      name="description"
+      content="Generate the perfect motorcycling route based based on your preferences with Ridi"
+    />
     <style>
       /**
        * Extend the react-native-web reset:
