feat: gtag on app

--- a/apps/expo-app/public/index.html
+++ b/apps/expo-app/public/index.html
@@ -89,6 +89,19 @@
       src="https://cdn.capture.dev/capture-js/browser/latest.js"
       async
     ></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-17048245597"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-17048245597");
+    </script>
   </head>
 
   <body>
